--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   device_preview: ^1.0.0
   carousel_slider: ^4.0.0
-
+  dio:
 
 dev_dependencies:
   flutter_test:
